<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_popular_movies"
        android:title="@string/popular"
        android:orderInCategory="2"
        appcompat:showAsAction="always" />

    <item
        android:id="@+id/action_in_theatre"
        appcompat:showAsAction="always"
        android:orderInCategory="3"
        android:title="@string/title"/>

    <item
        android:id="@+id/action_search"
        android:title="@string/search_movie"
        appcompat:showAsAction="always"
        android:orderInCategory="1"
        appcompat:actionViewClass="android.widget.SearchView"/>

    <item
    android:id="@+id/action_incoming"
    appcompat:showAsAction="always"
    android:orderInCategory="4"
    android:title="@string/incoming" />

    <item
        android:id="@+id/config"
        appcompat:showAsAction="always"
        android:orderInCategory="4"
        android:title="@string/config"
        android:icon="@android:drawable/ic_menu_preferences" />

</menu>
